--- a/src/server/config/config-development.yml
+++ b/src/server/config/config-development.yml
@@ -14,7 +14,7 @@ postgres:
   port: 5432
   user: postgres
   password: admin
-  dbName: car_sale_db
+  dbName: relibcadb
   sslMode: disable
   maxIdleConns: 15
   maxOpenConns: 100
