feat: create user, book, order aggregate model

--- a/src/api/config/config-development.yml
+++ b/src/api/config/config-development.yml
@@ -12,3 +12,8 @@ postgres:
   maxIdleConns: 15
   maxOpenConns: 100
   connMaxLifetime: 5
+logger:
+  filePath: ../logs/
+  encoding: json
+  level: debug
+  logger: zap
