feat: setup database(2)

--- a/.env
+++ b/.env
@@ -1,5 +1,8 @@
-POSTGRES_HOST=localhost
+POSTGRES_HOST="localhost"
+POSTGRES_USER="postgres"
+POSTGRES_PASSWORD="admin"
+POSTGRES_DB="relibcadb"
 POSTGRES_PORT=5432
-POSTGRES_PASSWORD=admin
-POSTGRES_USER=postgres
-POSTGRES_DB=relibcadb
+
+# PORT=8085
+
