feat: order implemented

--- a/web.env.yml
+++ b/web.env.yml
@@ -7,10 +7,10 @@ database:
   user: "postgres"
   pass: "admin"
   dbport: 5432
-# cloudinary:
-#   cloud: 'dzinbpitv' 
-#   key: '246763532629247' 
-#   secret: '94-TECFB3cMqa5FHQGaiB7xR6EE' 
+cloudinary:
+  cloud: 'do6khebsf' 
+  key: '213685959268479' 
+  secret: '94-0RF6AntOcRj03H_S6wMUehaF2WI' 
 email:
   name: Relibca
   address: garrickedd@gmail.com
